# satellite-weather-impact-analysis

./: .editorconfig  .gitignore  .gitmodules  README.md  license.md  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: black.yml  build.yml  build_latex.yml  build_notebook.yml  check.yml  deprecated.yml  main.yml  new_raw.yml  publish.yaml  pylint.yml  pytest.yml  pytests_and_formatting.yml  python-publish.yml  ruff.yml
.test/: graph.html
astra/: analyze.py  analyzer.py  automation.py  cli.py  graph.py  paths.py  test2.py
astra/config/: data.py  model.py
astra/fetch/: format.py  schema.yaml
astra/influxdb/: extractor.py  loader.py  merge.py  obtain.py  pull_wrapper.py  push.py  readme.md  retreive_wrapper.py  wrapper.py
astra/model/: analysis.py  cleaner.py  cross_correlate.py  cross_correlation.py  csv.py  data_model.py
astra/tools/: decrement.py  filter.py
cfg/: cubebel-1.json  data.yaml  grifex.json  lightsail-2.json  model.json  model.yaml  polaris.json  polaris_cfg.json  polaris_learn.json  polaris_learn_cfg.json  polaris_template.json
data/: README.md  fields_desc.txt  observed_solar_cycle_indices.json  predicted_solar_cycle.json  swpc_observed_ssn.json
data/AAUSAT4/: EPS Temperature-data-2024-02-03 16 57 48.csv  EPS Voltage and Cell Diff-data-2024-02-03 16 57 31.csv  EPS uptime count-data-2024-02-03 16 56 52.csv  Solar Power-data-2024-02-03 16 57 21.csv
data/GRIFEX/: bus_current.csv  bus_voltage.csv  data_mnt_usage.csv  resets.csv  rssi.csv
data/GRIFFEX/: memory_median.csv
data/aausat4/: EPS Temperature-data-2024-02-04 16 41 59.csv  Ground Stations Cumulative Count By Observed Frames-data-2024-02-04 16 42 08.csv  Solar Power-data-2024-02-04 16 42 02.csv  Visible Framecount from SA2KNG-data-2024-02-04 16 42 05.csv
data/armadillo/: Available Non-Volatile Memory-data-2024-02-04 01 13 35.csv  Battery Voltage-data-2024-02-04 01 13 30.csv  Boot Cause-data-2024-02-04 01 13 40.csv  Boot Count-data-2024-02-04 01 13 38.csv  EPS Output Currents-data-2024-02-04 01 13 44.csv  EPS Temperatures-data-2024-02-04 01 13 34.csv  Ground Stations Leaderboard By Observed Frames-data-2024-02-04 01 13 49.csv  Input Current-data-2024-02-04 01 13 31.csv  Last Frame Received-data-2024-02-04 01 13 51.csv  Message-data-2024-02-04 01 13 27.csv  Onboard Spacecraft Time-data-2024-02-04 01 13 55.csv  Position-data-2024-02-04 01 13 57.csv  Power States Reserved-data-2024-02-04 01 13 54.csv  Subsystem Power-data-2024-02-04 01 13 52.csv  Sun Sensor Address-data-2024-02-04 01 13 42.csv  Time Since Epoch (s)-data-2024-02-04 01 13 45.csv  Up Time (s)-data-2024-02-04 01 13 37.csv
data/bobcat-1/: Cubesat AX100 Stats-data-2024-02-04 01 24 40.csv  Data Collection Config File-data-2024-02-04 01 25 42.csv  Mission Control Watchdog-data-2024-02-04 01 25 45.csv  OBC Uptime-data-2024-02-04 01 24 55.csv  Selected Frames Count-data-2024-02-04 01 24 25.csv
data/cas-5a/: AGC Levels-data-2024-02-04 18 20 53.csv  AGC Levels-data-2024-02-07 10 58 34.csv  Camera Status-data-2024-02-07 10 58 48.csv  Camera Status-data-2024-02-11 02 23 01.csv  Last Frame Rcvd By-data-2024-02-07 10 58 19.csv  Last Frame Rcvd By-data-2024-02-11 02 22 06.csv  Power Supply Voltage-data-2024-02-04 18 20 16.csv  Power Supply Voltage-data-2024-02-07 10 58 03.csv  Power Supply Voltage-data-2024-02-11 02 21 52.csv  RF Power-data-2024-02-04 18 20 49.csv  RF Power-data-2024-02-11 02 22 25.csv  System Currents-data-2024-02-04 18 20 40.csv  System Currents-data-2024-02-07 10 58 23.csv  System Temperatures (C)-data-2024-02-04 18 20 45.csv  System Temperatures (C)-data-2024-02-07 10 58 27.csv  System Temperatures (C)-data-2024-02-11 02 22 19.csv  System Temperatures-data-2024-02-07 10 58 18.csv  Total Solar Array Current-data-2024-02-07 10 58 42.csv  Total Solar Array Current-data-2024-02-11 02 22 49.csv
data/cirbe/: Attitude Quaternion-data-2024-02-11 02 25 43.csv  Battery Voltage-data-2024-02-11 02 25 56.csv  ClkSyncHR run count-data-2024-02-11 02 24 17.csv  GPS Enabled-data-2024-02-11 02 24 52.csv  (+20 more)
docker/: .gitignore  compose.yml  default.env  docker-compose.yml  influxdb.yml  influxv2.env  readme.md  telegraf.toml
docs/: graph.md  polaris.md
glouton/: config.json
notebooks/: learn.py  polaris_correlations.ipynb  solar_correlations.ipynb
patch/: vinvelivaanilai_new_dgd_support.patch
scripts/: automation.py  create_polaris_cfg_for_satellite.py  cut.py  data_downloader.py  data_preprocessor.py  download_dgd.py  download_from_grafana_panel.js  download_swpc_data.py  firefox_grafana_parser.py  grafana_data_downloader.py  grafana_parser.py  imgui.ini  legacy_download_from_grafana_panel.js  parse_dashboard.py  polaris_config.json  polaris_control_panel.py  polaris_downloader.py  polaris_fetch.py  satellite_pages.txt
src/: analyzer.py  automation.py  core.py  correlation_finder.ipynb  grafana_data_downloader.py  graph.py
test/: data_options.js  graph_export.py  test_analysis.py  test_extraction.py  test_fetch.py  test_graph.json  test_graph_export.py
tests/: data_formatting.py  dataframe_parsing.py  feature_log.py  ftp_parsing.py  grafa_url_parsing.py  graph.py  graph_export.py
(+842 files in other folders)
