[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astra"
version = "2.0.0"
description = "Polaris 2.0 Satellite Weather Impact Analysis Model"
authors = [{ name = "Eugene M" }]
readme = "readme.md"
requires-python = ">=3.13"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    # Core Scientific Stack
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "python-dateutil>=2.8",

    # Visualization
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "plotly>=5.0",
    "pyecharts>=1.9",
    "graphviz>=0.16",

    # Statistics and ML
    "statsmodels>=0.13",
    "xgboost>=1.5",
    "mlflow>=1.20",

    # Utilities
    "requests>=2.26",
    "tqdm>=4.62",
    "GPUtil>=1.4",
    "pynvml>=12.0",
    "selenium>=4.0",

    # Jupyter Support
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    # Development Tools
    "black>=23.0",
    "pyright>=1.1",
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--cov=astra",
    "--cov-report=term-missing",
    "--cov-report=html"
]

[tool.black]
line-length = 80
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/tests/data/
'''

[tool.pyright]
include = ["astra"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "tests/data"
]
strict = ["astra"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

