[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "astra"
dynamic = ["version"]
description = "Polaris 2.0 Satellite Weather Impact Analysis Model"
authors = [{ name = "e_gleba" }]
readme = "readme.md"
requires-python = ">=3.13"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


dependencies = [
    # Core Scientific Stack
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "python-dateutil>=2.8",

    # Visualization
    "pyecharts>=1.9",

    # Statistics and ML
    "statsmodels>=0.13",
    "xgboost>=1.5",
    "mlflow>=1.20",

    # Utilities
    "requests>=2.26",
    "GPUtil>=1.4",
    "pynvml>=12.0",
    "playwright>=1.50.0",

    "typer>=0.15.1",
    "rich>=13.9.4",

    "polars>=1.26.0",
]

[project.scripts]
astra = "astra.cli:app"
ast = "astra.cli:app"

[tool.hatch.version]
source = "vcs"

[project.optional-dependencies]
dev = [
    # Development Tools
    "black>=23.0",
    "pyright>=1.1",
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "mypy>=1.0",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*.py"
addopts = ["--import-mode=importlib", "--strict-markers"]

[tool.black]
line-length = 80
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
^/tests/data/
^/data/
^/.github/
^/img/
^/docker/
^/htmlcov/
^/cfg/
^/docs/
^/.pytest_cache
^/*.md
'''

[tool.pyright]
include = ["astra"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "tests/data",
    "data",
    "img",
    "docker",
    ".github",
    "htmlcov",
    "dist",
    "cfg",
    "docs",
    "docker",
]
strict = ["astra"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
